# Havamania-MobileApp

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.staging.yml  docker-compose.yml  package-lock.json  setup.ps1  setup.sh  task.md
backend/: .env.example  Dockerfile  Dockerfile.dev  README.md  alembic.ini  check_user.py  create_test_user.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_empty.py  0002_create_users.py  0003_create_refresh_tokens.py  0004_create_profile_related_tables.py  0005_create_weather_snapshots.py  0006_create_alerts.py  0007_create_chatbot_usage_daily.py  0008_create_subscriptions.py  0009_create_push_tokens.py  0010_add_language_avatar_to_profiles.py  0011_add_avatar_url_to_profiles.py
backend/app/: main.py
backend/app/core/: config.py  exceptions.py  observability.py  security.py
backend/app/db/: session.py
backend/app/dependencies/: auth.py  premium.py  rate_limit.py
backend/app/middleware/: metrics.py  rate_limit.py  request_id.py
backend/app/models/: __init__.py  alert.py  chatbot_usage_daily.py  location.py  notification_preference.py  profile.py  push_token.py  refresh_token.py  subscription.py  user.py  weather_snapshot.py
backend/app/schemas/: alert.py  auth.py  chatbot.py  device.py  profile.py  subscription.py  weather.py
backend/app/services/: alerts_ingest.py  (+7 more)
backend/tests/: conftest.py  test_alerts.py  test_auth.py  test_chatbot.py  test_profile.py  test_push.py  test_subscription.py  test_weather_api.py  test_weather_service.py
(+223 files in other folders)
